--- a/WebApplication-test/Views/Account/SignUp.cshtml
+++ b/WebApplication-test/Views/Account/SignUp.cshtml
@@ -58,8 +58,8 @@
         "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownListFor(model => model.Gender, new List<SelectListItem> {
-            new SelectListItem { Text="Male", Value="M" },
-            new SelectListItem { Text="Female", Value="F" }
+            new SelectListItem { Text="Male", Value="Male" },
+            new SelectListItem { Text="Female", Value="Female" }
             }, new { @class = "form-control" })
             </div>
         </div>
