--- a/WebApplication-test/Views/Account/SignUp.cshtml
+++ b/WebApplication-test/Views/Account/SignUp.cshtml
@@ -1,4 +1,4 @@
-﻿@*
+﻿﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @model WebApplication_test.Models.ViewModel.UserModel
@@ -77,7 +77,7 @@
                     </div>
                     <div class="col">
                         <h6>Base64 Output</h6>
-                        <textarea id="textArea" name="ImageBase64" rows="30" cols="50"> </textarea>
+                        @*                     <textarea id="textArea" name="ImageBase64" rows="30" cols="50"> </textarea> *@
                         <input type="hidden" id="hiddenImageBase64" name="AccountImage" value="" />
 
                     </div>
@@ -88,16 +88,13 @@
                 </div>
             </div>
         </div>
-
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Register" class="btn btn-default" />
             </div>
         </div>
     </div>
-}
-
-<script>
+}<script>
      const input = document.getElementById("selectAvatar");
      const avatar = document.getElementById("avatar");
      const textArea = document.getElementById("textArea");
@@ -130,7 +127,6 @@
          uploadImage(e);
      });
 </script>
-
 <div>
     @Html.ActionLink("Back to Main", "Index","Home")
 </div>
