--- a/WebApplication-test/Views/Shared/_Layout.cshtml
+++ b/WebApplication-test/Views/Shared/_Layout.cshtml
@@ -3,15 +3,15 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - MyWebApplication</title>
+    <title>@ViewData["Title"] - WebApplication_test</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/MyWebApplication.styles.css" asp-append-version="true" />
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
+            <div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">MyWebApplication</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -43,6 +43,9 @@
                         @if (User.Identity.IsAuthenticated)
                         {
                             <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="MyProfile">Welcome @User.Identity?.Name!</a>
+                            </li>
+                            <li class="nav-item">
                                 <form asp-controller="Account" asp-action="LogOut" method="post" class="form-inline">
                                     <button type="submit" class="nav-link btn btn-link text-dark">
                                         Logout
@@ -67,7 +70,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="mt-auto text-muted footer">
         <div class="container">
             &copy; 2023 - WebApplication_test - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
