--- a/WebApplication-test/Views/Account/MyProfile.cshtml
+++ b/WebApplication-test/Views/Account/MyProfile.cshtml
@@ -17,7 +17,7 @@
         <div class="row pb-2">
             @Html.LabelFor(model => model.LoginName, htmlAttributes: new { @class = "control-label col-md-1" })
             <div class="col-md-5">
-                @Html.EditorFor(model => model.LoginName, new { htmlAttributes = new { @class = "form-control", @readonly = "true" } })
+                @Html.EditorFor(model => model.LoginName, new { htmlAttributes = new { @class = "form-control"} })
                 @Html.ValidationMessageFor(model => model.LoginName, "", new { @class = "text-danger" })
             </div>
             @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-1" })
